use the right path this time lmao

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		<script src="editor/js/libs/ternjs/doc_comment.js"></script>
 		<script src="editor/js/libs/tern-threejs/threejs.js"></script>
 		<script src="editor/js/libs/signals.min.js"></script>
-		<script src="js/libs/zip.min.js"></script>
+		<script src="editor/js/libs/zip.min.js"></script>
 
 		<script type="module">
 
